package com.alestrio.isotope.database;

public enum PriceCount_type {

    CUBICCM(),
    SQUARECM(),
    UNIT();

    private int i;

    PriceCount_type(){

    }
}
